--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           const relPos      = new THREE.Vector3().setFromMatrixPosition(relMat);
           const relQuat     = new THREE.Quaternion().setFromRotationMatrix(relMat);
           
-          const camPos = cam.object3D.position;
-          const camQuat= cam.object3D.quaternion;
+          const camPos = this.cam.object3D.position;
+          const camQuat= this.cam.object3D.quaternion;
 
           unity.SendMessage("CameraController","UpdateTransformData",
             JSON.stringify({
