--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
         type="nft"
         url="UnityWebARTest/Descriptors/test2"
         smooth="true"
-        smoothCount="10"
-        smoothTolerance="0.01"
-        smoothThreshold="5"
+        smoothCount="20"
+        smoothTolerance="0.05"
+        smoothThreshold="7"
+        detectMinSimilarity="0.6"
         cube-follow
       >
         <a-light type="ambient" intensity="1"></a-light>
