--- a/index.html
+++ b/index.html
@@ -90,11 +90,15 @@
           const relMat    = new THREE.Matrix4().copy(camMat).invert().multiply(markerMat);
           const relPos    = new THREE.Vector3().setFromMatrixPosition(relMat);
           const relQuat   = new THREE.Quaternion().setFromRotationMatrix(relMat);
+          const DIST_FACTOR = 3.0;
 
           unity.SendMessage(
             "CubeSpawner","UpdateTransformData",
             JSON.stringify({
-              position: { x: relPos.x/1000, y: relPos.y/1000, z: -relPos.z/1000 },
+              position: { 
+                x: relPos.x/1000 * DIST_FACTOR, 
+                y: relPos.y/1000 * DIST_FACTOR, 
+                z: -relPos.z/1000 * DIST_FACTOR},
               rotation: { x: -relQuat.x,  y: -relQuat.y,  z:  relQuat.z, w: relQuat.w }
             })
           );
@@ -121,6 +125,7 @@
         smoothTolerance="0.05"
         smoothThreshold="7"
         detectMinSimilarity="0.6"
+        scale="3 3 3"
         cube-follow
       >
         <a-light type="ambient" intensity="1"></a-light>
