--- a/index.html
+++ b/index.html
@@ -115,9 +115,12 @@
       <a-nft
         id="marker" type="nft"
         url="UnityWebARTest/Descriptors/test2"
-        smooth="true" smoothCount="20"
-        smoothTolerance="0.05" smoothThreshold="7"
-        detectMinSimilarity="0.6"
+        smooth="true" 
+        smoothCount="30"
+        smoothTolerance="0.01" 
+        smoothThreshold="5"
+        detectMinSimilarity="0.3"
+        scale="2 2 2"
         cube-follow
       >
         <a-light type="ambient" intensity="1"></a-light>
