--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <title>Unity WebARProject</title>
 
-    <!-- 1) A-Frame + AR.js for NFT tracking -->
+    <!-- A-Frame + AR.js for NFT tracking -->
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script>
 
+    <!-- Cosmetic, Look of the webpage-->
     <style>
       html, body {
         margin: 0; padding: 0; overflow: hidden; background: transparent;
@@ -27,25 +28,26 @@
     </style>
 
     <script>
-    AFRAME.registerComponent("cube-follow", {
-      init() {
-        console.log("[cube-follow] init on", this.el);
-        this.spawned   = false;
-        this.lostCount = 0;
-        this.marker    = this.el;
-        this.cam       = this.el.sceneEl.querySelector("[camera]");
+    AFRAME.registerComponent("cube-follow", { //Its like creating a function
+      init() { //initialising
+        //console.log("[cube-follow] init on", this.el); //Checking if the cube is indeed initialising
+        this.spawned   = false; //bool set to false
+        this.lostCount = 0; //tracking the number of times it has lost track
+        this.marker    = this.el; //ref to the marker
+        this.cam       = this.el.sceneEl.querySelector("[camera]"); //ref to the camera
 
         this.el.addEventListener("markerFound", () => {
           this.lostCount = 0;
           const u = window.unityInstance;
           if (!u?.SendMessage) return;
-          u.SendMessage("CubeSpawner","SetTracking",1);
-          u.SendMessage("CubeSpawner","SpawnCube");
+          //u.SendMessage("CubeSpawner","SetTracking",1);
+          u.SendMessage("CubeSpawner","SpawnCube", this.marker.id); //(ScriptName, FunctionName, Function's parameter)
           this.spawned = true;
         });
 
         this.el.addEventListener("markerLost", () => {
-          console.log("[cube-follow] markerLost (debouncing)");
+          u.SendMessage("CubeSpawner","DestroyCube", this.marker.id);
+          this.spawned = false;
         });
       },
 
@@ -58,7 +60,8 @@
         if (!vis) {
           if (++this.lostCount > 5) {
             console.log("[cube-follow] confirmed lost → destroying");
-            u.SendMessage("CubeSpawner","SetTracking",0);
+            u.SendMessage("CubeSpawner","DestroyCube", this.marker.id);
+            //u.SendMessage("CubeSpawner","SetTracking",0);
             this.spawned   = false;
             this.lostCount = 0;
           }
@@ -77,7 +80,7 @@
         const relQuat = camQuat.clone().invert().multiply(worldQuat);
 
         // 2) convert: mm→m, flip Z once, then optionally stretch & lift
-        const DIST_FACTOR = 3.0;    // if you want farther, bump this >1
+        const DIST_FACTOR = 3.0;    // This is where the cube will be placed, 
         const Y_OFFSET    = 0.05;   //  5cm up so the cube sits atop the plane
 
         const px = (worldPos.x / 1000) * DIST_FACTOR + 0.5;
@@ -88,6 +91,7 @@
         u.SendMessage(
           "CubeSpawner","UpdateTransformData",
           JSON.stringify({
+            id: this.marker.id,
             position: { 
               x: px, 
               y: py, 
@@ -112,20 +116,38 @@
       renderer="logarithmicDepthBuffer: true; alpha: true"
       arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true;"
     >
-      <a-nft
-        id="marker" type="nft"
-        url="UnityWebARTest/Descriptors/test2"
-        smooth="true" 
-        smoothCount="30"
-        smoothTolerance="0.01" 
-        smoothThreshold="5"
-        detectMinSimilarity="0.3"
-        scale="2 2 2"
-        cube-follow
-      >
-        <a-light type="ambient" intensity="1"></a-light>
-      </a-nft>
-      <a-entity camera></a-entity>
+    <!-- 1st Marker-->
+    <a-nft
+      id="marker" 
+      type="nft"
+      url="UnityWebARTest/Descriptors/test2"
+      smooth="true" 
+      smoothCount="30"
+      smoothTolerance="0.01" 
+      smoothThreshold="5"
+      detectMinSimilarity="0.3"
+      scale="2 2 2"
+      cube-follow
+    >
+    <a-light type="ambient" intensity="1"></a-light>
+    </a-nft>
+
+    <!-- 2nd Marker-->
+    <a-nft
+      id="marker2" 
+      type="nft"
+      url="UnityWebARTest/Descriptors/test3"
+      smooth="true" 
+      smoothCount="30"
+      smoothTolerance="0.01" 
+      smoothThreshold="5"
+      detectMinSimilarity="0.3"
+      scale="2 2 2"
+      cube-follow
+    >
+    <a-light type="ambient" intensity="1"></a-light>
+    </a-nft>
+    <a-entity camera></a-entity>
     </a-scene>
 
     <!-- === Unity Canvas & Loading UI === -->
