--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         const DIST_FACTOR = 3.0;    // This is where the cube will be placed, 
         const Y_OFFSET    = 0.05;   //  5cm up so the cube sits atop the plane
 
-        const px = (worldPos.x) * DIST_FACTOR;
-        const py = (worldPos.y) * DIST_FACTOR + Y_OFFSET;
-        const pz = -(worldPos.z) * DIST_FACTOR;
+        const px = (worldPos.x/1000) * DIST_FACTOR;
+        const py = (worldPos.y/1000) * DIST_FACTOR + Y_OFFSET;
+        const pz = -(worldPos.z/1000) * DIST_FACTOR;
 
         console.log(`[${this.marker.id}] worldPos:`, worldPos.toArray().map(v=>v.toFixed(3)));
         console.log(`[${this.marker.id}] px,py,pz:`, [px,py,pz].map(v=>v.toFixed(3)));
